testdata/baselines/reference/submodule/conformance/varRequireFromJavascript.errors.txt
use.js(1,18): error TS7016: Could not find a declaration file for module './ex'. 'ex.js' implicitly has an 'any' type.


==== use.js (1 errors) ====
    var ex = require('./ex')
                     ~~~~~~
!!! error TS7016: Could not find a declaration file for module './ex'. 'ex.js' implicitly has an 'any' type.
    
    // values work
    var crunch = new ex.Crunch(1);
    crunch.n
    
    
    // types work
    /**
     * @param {ex.Crunch} wrap
     */
    function f(wrap) {
        wrap.n
    }
    
==== ex.js (0 errors) ====
    export class Crunch {
        /** @param {number} n */
        constructor(n) {
            this.n = n
        }
        m() {
            return this.n
        }
    }
    